2000-11-20 10:00
    
    Ullrich improved shared_pod_manager.
    
2000-11-17 15:04
    Changed allocation strategy of shared_pod_manager to make it portable.
    
    Added pickling support + tests thanks to "Ralf W. Grosse-Kunstleve"
    <rwgk@cci.lbl.gov>

    Added a specialization of Callback<const char*> to prevent unsafe usage.

    Fixed Ullrich's operator_dispatcher refcount bug

    Removed const char* return values from virtual functions in tests; that
    usage was unsafe.

    Ullrich changed Module::add() so that it steals a reference (fix of refcount bug)
    
    Ullrich added operator_dispatcher::create() optimization
    
    Ullrich changed design and implementation of TypeObjectBase::enable() (to eliminate low-level
    code) and added shared_pod_manager optimization.


2000-11-15 12:01
    Fixed refcount bugs in operator calls.
    
    Added callback_adjust_refcount(PyObject*, Type<T>) to account for different ownership 
    semantics of Callback's return types and Caller's arguments (which both use from_python())
    This bug caused refcount errors during operator calls.

    Moved operator_dispatcher into extclass.cpp
    Gave it shared ownership of the objects it wraps

    Introduced sequence points in extension_class_coerce for exception-safety

    UPPER_CASE_MACRO_NAMES

    MixedCase template type argument names

    Changed internal error reporting to use Python exceptions so we don't force the
    user to link in iostreams code

    Changed error return value of call_cmp to -1

    Moved unwrap_* functions out of operator_dispatcher. This was transitional: when
    I realized they didn't need to be declared in extclass.h I moved them out, but
    now that operator_dispatcher itself is in extclass.cpp they could go back in.

    Numerous formatting tweaks

    Updated the BoundFunction::create() optimization and enabled it so it could actually be used!

2000-11-15 00:26

    Made Ullrich's operators support work with MSVC
    