@@ -480,7 +480,10 @@ class ExtensionClass
         this->def_getter(pm, name);
         this->def_setter(pm, name);
     }
-        
+    
+    // define the standard coercion needed for operator overloading
+    void def_standard_coerce();
+
     // declare the given class a base class of this one and register 
     // up and down conversion functions
     template <class S, class V>
@@ -526,7 +529,7 @@ class ExtensionClass
     template <long which, class Operand>
     inline void def_operators(operators<which,Operand>)
     {
-        register_coerce();
+        def_standard_coerce();
 
         // for some strange reason, this prevents MSVC from having an
         // "unrecoverable block scoping error"!
@@ -558,7 +561,7 @@ class ExtensionClass
     template <long which, class Left, class Right>
     inline void def_operators(operators<which,Left>, right_operand<Right>)
     {
-        register_coerce();
+        def_standard_coerce();
         
         choose_op<(which & op_add)>::template args<Left,Right>::add(this);
         choose_op<(which & op_sub)>::template args<Left,Right>::add(this);
@@ -578,7 +581,7 @@ class ExtensionClass
     template <long which, class Left, class Right>
     inline void def_operators(operators<which,Right>, left_operand<Left>)
     {
-        register_coerce();
+        def_standard_coerce();
         
         choose_rop<(which & op_add)>::template args<Left,Right>::add(this);
         choose_rop<(which & op_sub)>::template args<Left,Right>::add(this);
@@ -601,7 +604,6 @@ class ExtensionClass
         this->add_constructor_object(InitFunction<Holder>::create(sig));
     }
     
-    void register_coerce();
 };
 
 // A simple wrapper over a T which allows us to use ExtensionClass<T> with a
@@ -736,7 +738,7 @@ ExtensionClass<T, U>::ExtensionClass(const char* name)
 }
 
 template <class T, class U>
-void ExtensionClass<T, U>::register_coerce()
+void ExtensionClass<T, U>::def_standard_coerce()
 {
     Ptr coerce_fct = dict().get_item(String("__coerce__"));
     
